--- a/kubernetes/cyphria_applications_roles/cloudflare-tunnel/templates/argocd-deployment.j2
+++ b/kubernetes/cyphria_applications_roles/cloudflare-tunnel/templates/argocd-deployment.j2
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argocd-cloudflared-deployment
+  name: cloudflared
   namespace: argocd
 spec:
   project: default
@@ -29,7 +29,7 @@ spec:
 
           ingress:
             - hostname: cyphria.com
-              service: https://nginx-ingress-loadbalancer-ingress-nginx-controller-admission.nginx.svc.cluster.local:443
+              service: https://nginx-ingress-loadbalancer-ingress-nginx-controller.nginx.svc.cluster.local:443
             
             - service: http_status:404
               
