--- a/kubernetes/cyphria_applications_roles/cloudflare-tunnel/templates/argocd-deployment.j2
+++ b/kubernetes/cyphria_applications_roles/cloudflare-tunnel/templates/argocd-deployment.j2
@@ -29,7 +29,7 @@ spec:
 
           ingress:
             - hostname: cyphria.com
-              service: https://nginx-ingress-loadbalancer-ingress-nginx-controller.nginx.svc.cluster.local:80
+              service: http://nginx-ingress-loadbalancer-ingress-nginx-controller.nginx.svc.cluster.local:80
             
             - service: http_status:404
               
