--- a/kubernetes/cyphria_applications_roles/frontend/application/ingress-service.j2
+++ b/kubernetes/cyphria_applications_roles/frontend/application/ingress-service.j2
@@ -5,8 +5,8 @@ metadata:
   namespace: frontend
   annotations:
     external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
-    external-dns.alpha.kubernetes.io/hostname: cyphria.com,*.cyphria.com
-    external-dns.alpha.kubernetes.io/target: 45971a76-2017-4512-884c-006709288f70.cfargotunnel.com
+    external-dns.alpha.kubernetes.io/hostname: cyphria.com
+    external-dns.alpha.kubernetes.io/target: "{{ tunnel_id }}.cfargotunnel.com"
 spec: 
   ingressClassName: nginx
   rules:
