--- a/kubernetes/cyphria_applications_roles/frontend/templates/ingress-service.j2
+++ b/kubernetes/cyphria_applications_roles/frontend/templates/ingress-service.j2
@@ -5,7 +5,7 @@ metadata:
   namespace: frontend
   annotations:
     external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
-    external-dns.alpha.kubernetes.io/hostname: cyphria.com
+    external-dns.alpha.kubernetes.io/hostname: cyphria.com,*.cyphria
     external-dns.alpha.kubernetes.io/target: {{ tunnel_id }}.cfargotunnel.com
 spec: 
   ingressClassName: nginx
