--- a/kubernetes/cluster_roles/calico/templates/typha-metrics.j2
+++ b/kubernetes/cluster_roles/calico/templates/typha-metrics.j2
@@ -2,7 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
     name: {{ calico_vars.kubernetes.typha_metrics.name }}
-    namespace: {{ calico_vars.kubernetes.typha_metrics.namespace }}
+    namespace: calico-system
+    labels:
+        k8s-app: calico-typha-metrics
 spec:
     clusterIP: None
     selector:
