--- a/kubernetes/cluster_roles/calico/templates/felix-metrics.j2
+++ b/kubernetes/cluster_roles/calico/templates/felix-metrics.j2
@@ -10,5 +10,6 @@ spec:
     selector:
         k8s-app: calico-node
     ports:
-    - port: {{ calico_vars.kubernetes.felix_metrics.ports.port }}
+    - name: metrics
+      port: {{ calico_vars.kubernetes.felix_metrics.ports.port }}
       targetPort: {{ calico_vars.kubernetes.felix_metrics.ports.target }}
