using the secret provided by postgres to connect

--- a/kubernetes/cyphria_applications_roles/login-api/templates/redis-secret.j2
+++ b/kubernetes/cyphria_applications_roles/login-api/templates/redis-secret.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: redis-creds
-  namespace: loginapi
+  namespace: backend
 type: Opaque
 stringData:
   Redis_Addr:       "{{ redis_addr }}"
