adding proxy service for login api because the nginx ingress service wasnt discovering loginapi service due to them being in 2 different namespaces

--- a/kubernetes/cyphria_applications_roles/frontend/templates/ingress-service.j2
+++ b/kubernetes/cyphria_applications_roles/frontend/templates/ingress-service.j2
@@ -20,6 +20,13 @@ spec:
               name: frontend-service
               port:
                 number: 80
+        - path: /loginapi
+          pathType: Prefix
+          backend: 
+            service:
+              name: loginapi-proxy
+              port:
+                number: 443
     - host: "*.cyphria.com"
       http:
         paths:
