--- a/kubernetes/cyphria_applications_roles/frontend/templates/ingress-service.j2
+++ b/kubernetes/cyphria_applications_roles/frontend/templates/ingress-service.j2
@@ -7,6 +7,7 @@ metadata:
     external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
     external-dns.alpha.kubernetes.io/hostname: cyphria.com,*.cyphria
     external-dns.alpha.kubernetes.io/target: {{ tunnel_id }}.cfargotunnel.com
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec: 
   ingressClassName: nginx
   rules:
