--- a/kubernetes/cyphria_applications_roles/frontend/templates/ingress-service.j2
+++ b/kubernetes/cyphria_applications_roles/frontend/templates/ingress-service.j2
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: frontend-ingress
   namespace: frontend
+  labels:
+    external-dns: "true"
   annotations:
     external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
     external-dns.alpha.kubernetes.io/hostname: cyphria.com,*.cyphria
