--- a/infrastructure/kubernetes/roles/k3s/templates/config.j2
+++ b/infrastructure/kubernetes/roles/k3s/templates/config.j2
@@ -2,7 +2,7 @@ data-dir: {{ k3s_map.node.directory.data }}
 {% if k3s_map.node.default_registry_endpoint.enabled is falsy %}
 disable-default-registry-endpoint: true
 {% endif %}
-{% if k3s_node.service | lower == 'server' %}
+{% if k3s_node.service.type | lower == 'server' %}
 bind-address: {{ k3s_node.ip }}
 cluster-domain: {{ k3s_vars.cluster.domain }}
 {% if k3s_map.server.ha is truthy and k3s_postinstall is falsy and inventory_hostname == k3s_map.server.default_host %}
@@ -20,16 +20,16 @@ kube-controller-manager-arg: bind-address={{ k3s_node.ip }}
 kube-scheduler-arg: bind-address={{ k3s_node.ip }}
 {% endif %}
 kubelet-arg:
-  {{ k3s_resources.node.kubelet.args | to_nice_yaml | indent(2) }}
-{% if k3s_map.server.ha is truthy and (k3s_postinstall is truthy or k3s_node.service | lower == 'agent') %}
+  - config={{ k3s_project.cluster.config_kubelet }}
+{% if k3s_map.server.ha is truthy and (k3s_postinstall is truthy or k3s_node.service.type | lower == 'agent') %}
 server: https://{{ k3s_vars.server.api.host }}:{{ k3s_vars.server.api.port }}
 {% elif
-  (inventory_hostname != k3s_map.server.default_host and k3s_node.service | lower == 'server') or
-  (k3s_map.server.non_ha is truthy and k3s_node.service | lower == 'agent')
+  (inventory_hostname != k3s_map.server.default_host and k3s_node.service.type | lower == 'server') or
+  (k3s_map.server.non_ha is truthy and k3s_node.service.type | lower == 'agent')
 %}
-server: https://{{ k3s_map.server.default_host }}:{{ k3s_vars.server.api.port }}
+server: https://{{ k3s_vars.server.api.host }}:{{ k3s_vars.server.api.port }}
 {% endif %}
-{% if k3s_map.server.ha is truthy and k3s_node.service | lower == 'server' %}
+{% if k3s_map.server.ha is truthy and k3s_node.service.type | lower == 'server' %}
 tls-san:
   {{ k3s_vars.cluster.tls_san | to_nice_yaml | indent(2) }}
 {%- endif %}
