refactor(infrastructure): updated k3s config to disable metrics, cloud-controller, and kube proxy for cilium

--- a/infrastructure/kubernetes/roles/k3s/templates/config.j2
+++ b/infrastructure/kubernetes/roles/k3s/templates/config.j2
@@ -11,6 +11,9 @@ cluster-init: true
 embedded-registry: true
 disable:
   - traefik
+  - metrics-server
+disable-cloud-controller: true
+disable-kube-proxy: true
 disable-network-policy: true
 flannel-backend: none
 {% if k3s_map.server.ha %}
